<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_1">
        <item
            android:id="@+id/nav_latest"
            android:icon="@drawable/ic_action_latest"
            android:title="@string/nav_latest"
            android:checked="true"/>
        <item
            android:id="@+id/nav_politics"
            android:icon="@drawable/ic_action_politics"
            android:title="@string/nav_politics" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_action_education"
            android:title="@string/nav_education" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_action_sport"
            android:title="@string/Sport" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_action_name"
            android:title="@string/nav_report" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_action_business"
            android:title="@string/nav_business" />
        <item
            android:id="@+id/nav_tech"
            android:icon="@drawable/ic_action_tech"
            android:title="@string/nav_tech" />

        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_action_health"
            android:title="@string/nav_health" />

        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_action_entertainment"
            android:title="@string/nav_entertainment" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_2">
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_action_invite"
            android:title="@string/menu_invite" />
            <item
                android:id="@+id/nav_favourite"
                android:icon="@drawable/ic_action_favorite"
                android:title="@string/nav_favourite" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_setting"
                android:title="@string/nav_settings" />

       </group>

</menu>
