<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_action_name"
        android:title="@string/action_favourite"
        app:showAsAction="always"/>

    <!--<item-->
        <!--android:id="@+id/action_search"-->
        <!--android:icon="@drawable/ic_action_search"-->
        <!--android:title="@string/action_search"-->
        <!--app:showAsAction="always"/>-->

    <item
        android:id="@+id/search"
        android:title="@string/app_name"
        android:hint="@string/search_hint"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_settings"

        android:title="@string/action_settings"
        app:showAsAction="never" />


</menu>
