<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.crossriverwatch.crossriverwatch.activities.AboutActivity">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@color/background"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/crw2"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"/>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:id="@+id/app_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:text="@string/app_name"/>
        <TextView
            android:layout_below="@+id/app_name"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:id="@+id/app_version"
            android:paddingBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/app_version"/>

        <TextView
            android:id="@+id/dev_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_version"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
           android:paddingBottom="5dp"
            android:text="@string/developed_by"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_text"
            android:id="@+id/for_t"
            android:paddingLeft="16dp"
            android:textColor="@color/colorPrimary"

            android:layout_below="@+id/dev_by"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
           android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/for_t"
            android:layout_toEndOf="@+id/for_t"
            android:paddingLeft="5dp"
            android:layout_below="@+id/dev_by"
            android:onClick="openStartHub"
            android:id="@+id/star_hub"
            android:text="@string/start_innovation_hub"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/star_hub"
            android:id="@+id/all_note"
            android:textSize="17sp"
            android:textColor="@color/colorPrimary"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/all_logos_images_videos_and_post_are_properties_of"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/all_note"
        android:textColor="@color/blue"
        android:onClick="openCrossRiverWatch"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/crossriverwatch"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DISMISS"
            android:textStyle="bold"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:onClick="closeActivity"
            android:textColor="@color/colorAccent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</RelativeLayout>
